--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "url": "https://github.com/hanumanum/test-heroku-gol/issues",
   "dependencies": {
     "express": "^4.16.2",
-    "socket.io": "^2.1.1",
-    "ejs": "~0.7.1"
+    "socket.io": "^2.1.1"
   },
   "engines": {
     "node": "4.7.2"
